# pramana

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  SECURITY.md  alembic.ini  project-status.yaml  pyproject.toml
.github/workflows/: ci.yml
TICKETS/: PR-1-audit-table-revoke.md  PR-2-append-only-audit-log.md  PR-3-sso-rbac.md  PR-4-injection-safe-secrets-encryption.md
alembic/: env.py  script.py.mako
alembic/versions/: 0001_initial.py  0002_content_draft.py  0003_consumable_package_ingestion.py  0003_content_request.py  0004_user_manager_fk.py
docs/: 01_initial_analysis.md  02_resolved_decisions.md  03_ai_drafted_human_approved_content.md  shared-services.md
docs/api/: README.md  openapi.yaml
docs/frameworks/: framework_fcpa.md  framework_gdpr.md  framework_hipaa.md  framework_iso27001.md  framework_pci_dss.md  framework_sox.md  regulatory_frameworks_index.md
docs/user-stories/: README.md
docs/user-stories/_templates/: package-request.md  user-story.md
docs/user-stories/fcpa/: README.md  US-FCPA-0001-anti-bribery-training-assignment.md  US-FCPA-0002-gifts-travel-hospitality-scenarios.md  US-FCPA-0003-third-party-intermediary-training.md  US-FCPA-0004-books-records-internal-controls.md  US-FCPA-0005-human-approved-fcpa-content.md  US-FCPA-0006-audit-evidence-export.md  US-FCPA-0007-high-risk-geography-targeting.md  US-FCPA-0008-facilitation-payment-attestation.md  US-FCPA-0009-ma-successor-liability-trigger.md  US-FCPA-0010-refresher-cadence-reassignment-trigger.md  US-FCPA-0011-board-program-dashboard.md
docs/user-stories/fcpa/briefs/: PR-FCPA-anti-bribery.jsonc
docs/user-stories/gdpr/: README.md  US-GDPR-0001-data-protection-awareness-training.md  US-GDPR-0002-breach-notification-training.md  US-GDPR-0003-data-subject-rights-training.md  US-GDPR-0004-trainee-erasure-pseudonymization.md  US-GDPR-0005-dpo-oversight-dashboard.md  US-GDPR-0006-human-approved-gdpr-content.md  US-GDPR-0007-dpa-evidence-export.md
docs/user-stories/hipaa/: README.md  US-HIPAA-0001-privacy-rule-workforce-training.md  US-HIPAA-0002-security-awareness-program.md  US-HIPAA-0003-breach-recognition-reporting.md  US-HIPAA-0004-role-based-training-paths.md  US-HIPAA-0005-onhire-policy-change-triggers.md  US-HIPAA-0006-business-associate-training.md  US-HIPAA-0007-human-approved-hipaa-content.md  US-HIPAA-0008-ocr-evidence-export.md
docs/user-stories/iso27001/: README.md  US-ISO-0001-security-awareness-training.md  US-ISO-0002-role-based-competence-training.md  US-ISO-0003-acceptable-use-information-handling.md  US-ISO-0004-surveillance-cadence-retraining.md  US-ISO-0005-human-approved-iso-content.md  US-ISO-0006-certification-audit-evidence-export.md  US-ISO-0007-management-review-dashboard.md
docs/user-stories/pci-dss/: README.md  US-PCI-0001-cde-security-awareness-training.md  US-PCI-0002-secure-development-training.md  US-PCI-0003-security-policy-acknowledgement.md  US-PCI-0004-cde-cadence-retraining.md  US-PCI-0005-human-approved-pci-content.md  US-PCI-0006-qsa-evidence-export.md  US-PCI-0007-multi-method-program-reporting.md
docs/user-stories/platform/: README.md  US-PLATFORM-0001-learner-training-library.md  US-PLATFORM-0002-course-player.md  US-PLATFORM-0003-commission-training-content.md  US-PLATFORM-0004-ingestion-review-queue.md  US-PLATFORM-0005-regenerate-with-updated-parameters.md
docs/user-stories/sox/: README.md  US-SOX-0001-icfr-controls-awareness-training.md  US-SOX-0002-code-of-conduct-attestation.md  US-SOX-0003-fraud-whistleblower-training.md  US-SOX-0004-insider-trading-reg-fd.md  US-SOX-0005-disclosure-controls-officer-certification.md  US-SOX-0006-auditor-404-evidence-binder.md  US-SOX-0007-human-approved-sox-content.md
pramana/: __init__.py  config.py  exceptions.py
pramana/api/: app.py  consumer_library.py  content_drafts.py  content_requests.py  dependencies.py  errors.py  frameworks.py  schemas.py
pramana/db/: base.py  mixins.py  session.py
pramana/db/models/: __init__.py  assignment.py  audit.py  content.py  content_request.py  course.py  identity.py
pramana/domain/: __init__.py  assignment_state.py  consumable_package.py  content_approval.py  content_generation.py  enums.py  ingestion.py  package_request.py  publication.py  video_generation.py
pramana/services/: audit.py  auth.py  consumer_library.py  content_generation.py  content_requests.py  content_review.py  definitions_library.py  llm.py  mentible_client.py  package_signing.py  storage.py  video.py  video_generation.py
tests/: conftest.py  support.py  test_config.py  test_content_generation.py  test_definitions_clause_text.py  test_exceptions.py  test_video_generation.py
tests/api/: test_consumer_library.py  test_content_drafts.py  test_content_requests.py  test_frameworks.py
tests/db/: test_content_models.py  test_models.py
tests/domain/: test_assignment_state.py  test_consumable_package.py  test_content_approval.py  test_content_approval_received.py  test_ingestion.py  test_package_request.py  test_publication.py
tests/services/: test_audit.py  test_auth.py  test_consumer_library.py  test_content_requests.py  test_content_review.py  test_definitions_library.py
