[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pramana"
version = "0.1.0"
description = "Compliance training and tracking platform"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Proprietary" }
authors = [{ name = "WeGoFwd" }]
keywords = ["compliance", "training", "sox", "lms"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "License :: Other/Proprietary License",
    "Operating System :: POSIX :: Linux",
    "Framework :: FastAPI",
]

dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.12",
    # Data validation & settings
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    # Database
    "sqlalchemy[asyncio]>=2.0.35",
    "alembic>=1.13.3",
    "asyncpg>=0.30.0",
    # Auth
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    # Background jobs
    "celery[redis]>=5.4.0",
    "redis>=5.1.0",
    # Logging
    "structlog>=24.4.0",
    # Object storage
    "boto3>=1.35.0",
    # PDF generation (for certificates, used in later phases)
    "weasyprint>=63.0",
]

[project.optional-dependencies]
dev = [
    # Linting & formatting
    "ruff>=0.7.0",
    # Type checking
    "mypy>=1.13.0",
    "types-python-jose>=3.3.4",
    "types-passlib>=1.7.7",
    # Testing
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "factory-boy>=3.3.1",
    "hypothesis>=6.115.0",
    "httpx>=0.27.0",  # For FastAPI test client
    # Pre-commit
    "pre-commit>=4.0.0",
    # Security scanning
    "bandit>=1.7.10",
]

[project.urls]
Repository = "https://github.com/wegofwd2020-hub/pramana"

# ----------------------------------------------------------------------------
# setuptools
# ----------------------------------------------------------------------------
[tool.setuptools.packages.find]
include = ["pramana*"]
exclude = ["tests*", "alembic*"]

# ----------------------------------------------------------------------------
# Ruff — linting + formatting (replaces black, isort, flake8)
# ----------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["alembic/versions"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "SIM", # flake8-simplify
    "RUF", # ruff-specific
    "ANN", # flake8-annotations (require type hints)
    "S",   # flake8-bandit (security)
    "DTZ", # flake8-datetimez (require timezone-aware datetimes)
    "RET", # flake8-return
    "PT",  # flake8-pytest-style
]
ignore = [
    "ANN401", # Allow `Any` typing where deliberate
    "S101",   # Allow `assert` (used in pytest)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["ANN", "S105", "S106"]  # Tests can be looser on annotations & hardcoded "passwords"
"alembic/env.py" = ["ANN", "E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

# ----------------------------------------------------------------------------
# mypy — strict type checking
# ----------------------------------------------------------------------------
[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["alembic.*", "celery.*", "factory.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

# ----------------------------------------------------------------------------
# pytest
# ----------------------------------------------------------------------------
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--showlocals",
    "--tb=short",
]
markers = [
    "unit: Pure unit tests, no I/O",
    "integration: Integration tests requiring DB/Redis",
    "slow: Tests slower than 1 second",
]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning:passlib.*",
]

# ----------------------------------------------------------------------------
# coverage
# ----------------------------------------------------------------------------
[tool.coverage.run]
source = ["pramana"]
branch = true
omit = ["pramana/__main__.py"]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
fail_under = 80
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "@overload",
]

# ----------------------------------------------------------------------------
# bandit — security scanning
# ----------------------------------------------------------------------------
[tool.bandit]
exclude_dirs = ["tests", "alembic"]
skips = ["B101"]  # assert_used (we control its use)
